SECTIONS Main section has been added to index page.

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,2 +1,2 @@
-html {
-  background: blue; }
+.section-background-img {
+  background-image: url("https://malujemypoznan.com.pl/templates/yootheme/cache/building-2762342_1280-95306732.jpeg"); }
