--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -1,2 +1,5 @@
-html 
-  background: blue 
+.section-background-img
+  background-image: url('https://malujemypoznan.com.pl/templates/yootheme/cache/building-2762342_1280-95306732.jpeg')
+  // background-repeat: no-repeat
+  // background-size: cover
+  // min-height: calc((100vh - 70px) - 1172px)
