CURVE Bottom of header picture has been styliezd by white curve border.

--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -3,3 +3,5 @@
   // background-repeat: no-repeat
   // background-size: cover
   // min-height: calc((100vh - 70px) - 1172px)
+.bottom-curve
+  background-image: url('images/curve-red.png')
