GULP REPLACE PLUGIN Setup for replacing css url paths.

--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -4,4 +4,4 @@
   // background-size: cover
   // min-height: calc((100vh - 70px) - 1172px)
 .bottom-curve
-  background-image: url('images/curve-red.png')
+  background-image: url("curve-red.png")
