--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -2,4 +2,4 @@
   background-image: url("https://malujemypoznan.com.pl/templates/yootheme/cache/building-2762342_1280-95306732.jpeg"); }
 
 .bottom-curve {
-  background-image: url("images/curve-red.png"); }
+  background-image: url("app/minified/images/curve-red.png"); }
