--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -1,7 +1,12 @@
 .section-background-img
   background-image: url('https://malujemypoznan.com.pl/templates/yootheme/cache/building-2762342_1280-95306732.jpeg')
-  // background-repeat: no-repeat
-  // background-size: cover
-  // min-height: calc((100vh - 70px) - 1172px)
+  // box-shadow: inset 0 0 0 100px rgba(0, 0, 0, 0.27)
 .bottom-curve
-  background-image: url("curve-red.png")
+  background-image: url("../images/curve.png")
+  background-repeat: no-repeat
+  background-position: bottom 
+  height: 100%
+  width: 100%
+  background-size: contain
+  position: absolute
+  bottom: -4px
