NAVBAR Navbar and header background image.

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,5 +1,5 @@
 .section-background-img {
-  background-image: url("https://malujemypoznan.com.pl/templates/yootheme/cache/color-3238003_1920-7fa0dd65.jpeg"); }
+  background-image: url("../images/header5.1.jpg"); }
 
 .bottom-curve {
   background-image: url("../images/curve.png");
