--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -27,7 +27,7 @@ textarea
   background: $main !important
   box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.28);
 
-.uk-box-shadow-medium:not(.uk-navbar-transparent)
+.uk-box-shadow-large:not(.uk-navbar-transparent)
   box-shadow: 0 10px 30px 0 rgba(0,0,0,.28)
 
 .uk-button-text
