--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -32,19 +32,27 @@ textarea {
   box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.28); }
 
 .uk-button-text {
-  border-radius: 0 50px 50px 0;
-  padding: 16px 71px 16px 54px;
+  box-sizing: border-box;
+  border-radius: 0;
+  padding: 0px 71px 0px 54px;
+  line-height: 56px;
   color: #fff;
-  border: 2px solid transparent; }
+  border: 1px solid white; }
   .uk-button-text:hover {
     background-color: #ba4108;
     color: rgba(255, 255, 255, 0.5);
-    box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.08); }
+    box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.08);
+    border: none;
+    line-height: 54px;
+    padding: 0px 72px 0px 55px; }
   .uk-button-text::before {
-    right: 20px; }
+    right: 25px; }
 
 .uk-section-secondary {
   background: #313E59; }
 
 .uk-navbar-container:not(.uk-navbar-transparent) {
   background: #313E59; }
+
+.el-content {
+  font-size: 1.3em; }
