--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -19,7 +19,8 @@ textarea
   border-radius: 60px 0 0 60px
 #contact
   margin-bottom: 40px
-
+.uk-navbar
+  padding: 5px 0
 .uk-navbar-transparent
   background: $main
   opacity: 0.74
@@ -55,6 +56,11 @@ textarea
 
 .el-content
   font-size: 1.3em
+.totop
+  position: fixed
+  right: 70px
+  bottom: 100px
+  width: 125px
 
   
 
