SCROLL TO TOP Animation has been added to scroll to top link. Link shows up and dissapear on scroll.

--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -62,5 +62,15 @@ textarea
   bottom: 100px
   width: 125px
 
+#totop-link
+  visibility: hidden
+  transition: visibility 0s linear 0.33s, opacity 0.33s linear;
+.totop-visible
+  visibility: visible
+  // opacity: 1
+  // transition-delay: 0s 
+  
+
+
   
 
