--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -64,11 +64,11 @@ textarea {
   position: fixed;
   right: 70px;
   bottom: 100px;
-  width: 125px; }
-
-#totop-link {
+  width: 125px;
   visibility: hidden;
-  transition: visibility 0s linear 0.33s, opacity 0.33s linear; }
+  opacity: 0;
+  transition: all .3s linear; }
 
 .totop-visible {
-  visibility: visible; }
+  visibility: visible;
+  opacity: 1; }
