--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -56,20 +56,21 @@ textarea
 
 .el-content
   font-size: 1.3em
+
 .totop
   position: fixed
   right: 70px
   bottom: 100px
   width: 125px
+  visibility: hidden 
+  opacity: 0
+  transition: all .3s linear
 
-#totop-link
-  visibility: hidden
-  transition: visibility 0s linear 0.33s, opacity 0.33s linear;
 .totop-visible
-  visibility: visible
-  // opacity: 1
-  // transition-delay: 0s 
+  visibility: visible 
+  opacity: 1
   
+
 
 
   
