--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -1,9 +1,19 @@
 @import 'variables'
 
-.section-background-img
-  // background-image: url('https://malujemypoznan.com.pl/templates/yootheme/cache/color-3238003_1920-7fa0dd65.jpeg')
+#services
+  .uk-text-large
+
+#services-call-to-action
+    background-color: red 
+
+.header-background-image
   background-image: url('../images/header2.jpg')
-  // box-shadow: inset 0 0 0 100px rgba(0, 0, 0, 0.27)
+
+.testimonial-background-image
+  background-image: url('../images/header4.jpg')
+  background-color: $dark 
+  background-blend-mode: luminosity 
+
 .bottom-curve
   background-image: url("../images/curve.png")
   background-repeat: no-repeat
@@ -73,6 +83,14 @@ textarea
 .side-image
   padding-left: 50px
   border-radius: 0 0 30px 0
+
+#testimonials
+  // background-image: url('../images/header6.jpg')
+  // background-size: cover
+  // background-color: $dark
+  // background-blend-mode: luminosity
+
+  
 
 
 
