SERVICES CALL TO ACTION

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,5 +1,5 @@
 #services-call-to-action {
-  background-color: red; }
+  background-color: #d24a09; }
 
 .header-background-image {
   background-image: url("../images/header2.jpg"); }
