--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -4,7 +4,8 @@
   .uk-text-large
 
 #services-call-to-action
-    background-color: red 
+  background-color: $orange
+    
 
 .header-background-image
   background-image: url('../images/header2.jpg')
