--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -1,10 +1,13 @@
 @import 'variables'
 
 #services
-  .uk-text-large
+  padding: 60px 0 
 
 #services-call-to-action
-  background-color: $orange
+  background-color: $yellow
+  h2
+    color: $dark
+
     
 
 .header-background-image
