--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -105,8 +105,11 @@ textarea
       font-size: 1.5em
   q
     font-size: .9em
-
-
-
-  
+#footer
+  .uk-text-lead
+    font-size: 1.3em
+  .uk-list-divider > li:nth-child(n+2)
+    margin-top: 0
+    padding: 4px 0px
+    border-top: 1px solid rgba(255,255,255,.1)
 
