--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -105,6 +105,27 @@ textarea
       font-size: 1.5em
   q
     font-size: .9em
+#gallery
+  .uk-section-large
+    padding-bottom: 10px
+#map
+  // background-color: $main
+  padding-top: 0
+  blockquote
+    padding-bottom: 0px
+  iframe
+    width: 100%
+    height: 400px
+
+#contact
+  padding-top: 0
+  address
+    p
+      font-size: 1.5em 
+    span
+      padding-right: 8px
+      position: relative
+      bottom: 2px
 #footer
   .uk-text-lead
     font-size: 1.3em
@@ -112,4 +133,8 @@ textarea
     margin-top: 0
     padding: 4px 0px
     border-top: 1px solid rgba(255,255,255,.1)
+  span
+    padding-right: 8px
+    position: relative
+    bottom: 2px
 
