--- a/app/sass/styles.sass
+++ b/app/sass/styles.sass
@@ -108,6 +108,9 @@ textarea
 #gallery
   .uk-section-large
     padding-bottom: 10px
+  h3.el-title
+    text-shadow: 1px 1px rgba(0,0,0,.4) 
+    letter-spacing: 1.2px
 #map
   // background-color: $main
   padding-top: 0
