--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -20,8 +20,17 @@
 textarea {
   resize: none; }
 
-.header-button {
+#tm-mobile .uk-offcanvas-bar {
+  background: #313E59;
+  padding-top: 80px; }
+
+#header .header-button {
   border-radius: 60px 0 0 60px; }
+
+@media screen and (max-width: 959px) {
+  #header h1 {
+    font-size: 1.8em;
+    margin-top: 0; } }
 
 #contact {
   margin-bottom: 40px; }
@@ -73,6 +82,11 @@ textarea {
   width: 70px;
   visibility: hidden;
   transition: all .2s linear; }
+  @media screen and (max-width: 959px) {
+    .totop {
+      right: 30px;
+      bottom: 30px;
+      width: 60px; } }
 
 #totop-link {
   opacity: 0.9; }
@@ -84,6 +98,11 @@ textarea {
 #summary .side-image {
   padding-left: 50px;
   border-radius: 0 0 30px 0; }
+
+@media screen and (max-width: 659px) {
+  #summary .uk-panel.panel-about-me {
+    text-align: center;
+    top: -40px; } }
 
 #services {
   padding: 80px 0; }
@@ -100,6 +119,10 @@ textarea {
 
 #testimonials q {
   font-size: .9em; }
+
+@media screen and (max-width: 959px) {
+  #gallery .gallery-main-container {
+    padding-bottom: 60px !important; } }
 
 #gallery .uk-section-large {
   padding-bottom: 10px; }
